--- a/package.xml
+++ b/package.xml
@@ -67,6 +67,7 @@
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
+    export GAZEBO_PLUGIN_PATH=${GAZEBO_PLUGIN_PATH}:~/catkin_ivr_ws/src/ivr_assignment/worlds/build
   </export>
+  
 </package>
